SERVER-21988: do not fassert when re-applying same oplog entry till we fix the buffering issue